[package]
name = "internet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
scraper = "0.18.1"
dotenv = "0.15.0"

[dependencies.pnet]
version = "0.34.0"
